@@ -21,10 +21,10 @@ class TimeSlotHandler extends TimeSlotCombiner<TimeSlot> {
 
     @Override
     protected TimeSlot combineWithBothAssigned(List<Weekday> wkd1, Integer sn1, List<Weekday> wkd2, Integer sn2) {
-        if (wkd2.getFirst().isTR() && wkd1.getFirst().isTR()) {
+        if (wkd2.get(0).isTR() && wkd1.get(0).isTR()) {
             return ef.makeHCTimeSlot(wkd1, sn2);
         }
-        if (!wkd2.getFirst().isTR() && !wkd1.getFirst().isTR()) {
+        if (!wkd2.get(0).isTR() && !wkd1.get(0).isTR()) {
             return ef.makeHCTimeSlot(wkd1, sn2);
         }
         return ef.makeHCTimeSlot(wkd2, sn2);
@@ -32,9 +32,9 @@ class TimeSlotHandler extends TimeSlotCombiner<TimeSlot> {
 
     @Override
     protected TimeSlot combineWithFirstUnassignedSecondAssigned(List<Weekday> weekdays2, Integer slotnum2) {
-        if (weekdays2.getFirst().isTR()) {
+        if (weekdays2.get(0).isTR()) {
             weekdays2 = Weekday.TR();
-        } if(!weekdays2.getFirst().isTR()) {
+        } if(!weekdays2.get(0).isTR()) {
             weekdays2 = Weekday.MWF();
         }
         return ef.makeHCTimeSlot(weekdays2, slotnum2);
